Spacing Fix

--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@
 {
 	background-color: rgba(0, 0, 0, 0.8);
 	width: 100%;
-	min-height: 230px;
+	min-height: 240px;
 	color: #FFFFFF;
 	padding: 30px 0px;
 	position: absolute;
